--- a/frontend/src/components/Event/Events.css
+++ b/frontend/src/components/Event/Events.css
@@ -1,53 +1,88 @@
 .eventCard {
-    background-color: rgb(108, 117, 125); 
-    background-image: -moz-linear-gradient( black, gray);
-    /* border: 2px solid rgb(33, 37, 41); */
-    border-radius: 10px;
-    margin: 10px;
     padding: 20px;
-    color: white;
-    max-width: 25%;
-    min-width: 25%;
+    margin: 15px;
+    max-width: 300px;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 50%, rgba(0, 0, 0, 0.6) 50%);
+    border-radius: 8px;
+    color: #fff;
+    text-align: center;
+    border: 1px solid #100808bf;
+    background-color: #000000f7;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    transition: transform 0.2s, box-shadow 0.2s;
 }
-
 
 .eventCard:hover {
-    transform: scale(1.05); /* Scale up the card on hover */
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
 }
 
-.cardButton{
-    margin: 2px;
-    padding: 10px;
-    font-size: 1.15vw;
+.eventCard h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    background-color: rgba(15, 15, 15, 0.61);
+    color: #ff5900a2;
+}
+
+.eventCard h3 {
+    margin: 0 0 10px;
+    font-size: 20px;
+}
+
+.cardButton {
+    margin: 5px;
+    padding: 12px;
+    font-size: 18px;
     border: 2px solid #dadada;
     border-radius: 7px;
-    font-weight: bold; 
-    cursor: pointer;  
-
+    font-weight: bold;
+    cursor: pointer;
+    background-color: #ffffff;
+    color: #080505;
+    transition: all 0.3s ease;
 }
 
-.cardButton:hover{
+.cardButton:hover {
     outline: none;
     border-color: #9ecaed;
+    background-color: #444;
     box-shadow: 0 0 10px #9ecaed;
 }
 
-
 .cardContainer {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin: 10px;
-    margin-top: 8%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 15px;
+    margin: 20px auto;
     justify-content: center;
 }
 
 .userTable {
-    margin:50px auto;    
-    font-size: small;    
+    margin: 50px auto;
+    font-size: small;
+    border-collapse: collapse;
+    color: #ff5900a2;
+    width: 80%;
+    max-width: 1000px;
 }
 
-.userTable td{
+.userTable td, .userTable th {
     max-width: 115px;
+    padding: 8px;
     word-wrap: break-word;
+    border: 1px solid #555;
+}
+
+.userTable th {
+    background-color: #333;
+    color: #ff5900a2;
+    font-weight: bold;
+}
+
+.userTable tr:nth-child(even) {
+    background-color: #2c2f33;
+}
+
+.userTable tr:hover {
+    background-color: #3b3d40;
 }
